add default schema to properties